# python-connector

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  extra.css  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest-watch.conf.ini  sitemap.xml  test.csv
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  release-staging.yml  release.yml  update_doc.yml
api_reference/: index.html
braincube_connect/: client.py  errors.py
braincube_connector/: __init__.py  braincube.py  client.py  constants.py  custom_types.py  instances.py  modelbuilder.py  parameters.py  tools.py
braincube_connector/bases/: __init__.py  base_entity.py  resource_getter.py
braincube_connector/data/: __init__.py  conditions.py  data.py
braincube_connector/memory_base/: __init__.py  memory_base.py
braincube_connector/memory_base/nested_resources/: condition.py  condition_container.py  datagroup.py  event.py  job.py  mb_child.py  modelbuilder.py  period.py  rule.py  study.py  variable.py
contributing/: index.html
custom_theme/partials/: toc-item.html
docs/: api_reference.md  build_doc.sh  documentation.md  gen_api_doc_stubs.py
docs/custom_theme/: main.html
docs/custom_theme/partials/: header.html
docs/jupyter_presentation/: usage_example.ipynb  utilisation_exemple.ipynb
gen_api_doc_stubs/: index.html
jupyter_presentation/usage_example/: index.html
py_client/: __init__.py  base_entity.py  braincube.py  client.py  constants.py  data.py  instances.py  job.py  memory_base.py  parameters.py  tools.py  variable.py
py_client/bases/: __init__.py  base.py  base_entity.py  resource_getter.py
py_client/data/: conditions.py  data.py
py_client/memory_base/: __init__.py  memory_base.py
py_client/memory_base/nested_resources/: __init__.py  condition_container.py  datagroup.py  event.py  job.py  mb_child.py  rule.py  variable.py
reference/braincube_connector/bases/base/: index.html
reference/braincube_connector/bases/base_entity/: index.html
reference/braincube_connector/bases/resource_getter/: index.html
reference/braincube_connector/braincube/: index.html
reference/braincube_connector/client/: index.html
reference/braincube_connector/constants/: index.html
reference/braincube_connector/data/conditions/: index.html
reference/braincube_connector/data/data/: index.html
reference/braincube_connector/instances/: index.html
reference/braincube_connector/memory_base/memory_base/: index.html
reference/braincube_connector/parameters/: index.html
reference/braincube_connector/tools/: index.html
release_notes/: app_release.md
release_notes/braincube-connector-python-library-for-braincube/: page.md
search/: search_index.json
site/: sitemap.xml
site/CODE_OF_CONDUCT/: index.html
site/api_reference/: index.html
site/reference/braincube_connector/braincube/: index.html
site/reference/braincube_connector/instances/: index.html
site/search/: search_index.json
tests/: __init__.py  mock.py  test_base.py  test_base_entity.py  test_braincube.py  test_client.py  test_data.py  test_job.py  test_memory_base.py  test_modelbuilder.py  test_parameters.py  test_tools.py  test_variable.py
tests/test_bases/: test_base.py  test_base_entity.py  test_resource_getter.py
tests/test_data/: test_conditions.py  test_data.py
tests/test_memory_base/: test_memory_base.py
tests/test_memory_base/test_nested_resources/: test_condition_container.py  test_datagroup.py  test_event.py  test_job.py  test_mb_child.py  test_variable.py
tests_integration/: __init__.py  mocks.py  test_integration.py  tests_integration.py
(+15 files in other folders)
