[tool.poetry]
name = "py_client"
version = "0.0.0"
description = "python client to the braincube web services"
authors = ["Braincube <io@braincube.com>"]
license = "MIT"
repository = "https://gitlab.ipleanware.com/braincube/core/python/py_client"
homepage = "https://gitlab.ipleanware.com/braincube/core/python/py_client"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
responses = "^0.10.9"
coverage = "^5.0.3"
black = "^19.10b0"
wemake-python-styleguide = "^0.13.4"
pytest = "^5.3.5"
pytest_mock = "^2.0.0"
pre-commit = "^2.0.1"
mkdocs = "^1.0.4"
mkdocstrings = "^0.7.0"
mkdocs-material = "^4.6.3"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

