[tool.poetry]
version = "2.5.1"
name = "braincube-connector"
description = "python client to the braincube web services"
authors = ["Braincube <io@braincube.com>"]
license = "MIT"
packages = [
	{ include = "braincube_connector" },
]
classifiers = [
		"Programming Language :: Python :: 3.8",
		"Programming Language :: Python :: 3.7",
		"Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent"
]
keywords = ["bc_connector", "API", "braincube"]
readme = "README.md"
homepage = "https://braincube-io.github.io/python-connector/"
repository = "https://github.com/braincube-io/python-connector"

[tool.poetry.dependencies]
python = "^3.8.5"
requests = "^2.23.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
responses = "^0.10.9"
coverage = "^5.0.3"
black = "^19.10b0"
wemake-python-styleguide = "^0.13.4"
pytest = "^6.0.0"
pytest_mock = "^2.0.0"
pre-commit = "^2.0.1"
mkdocs = "^1.0.4"
mkdocstrings = "^0.10.3"
mkdocs-gen-files = "^0.3.1"
mkdocs-material = "^4.6.3"
anybadge = "^1.7.0"
isort = "4.3.20"
jupyter = "^1.0.0"
notebook = "^6.3.0"
mkdocs-jupyter = "^0.16.1"
pytest-watch = "^4.2.0"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests_integration",
]

[tool.coverage.report]
exclude_lines = [
	      'pragma: no cover',
	      'if TYPE_CHECKING:'
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
