[tool.poetry]
version = "2.8.0"
name = "braincube-connector"
description = "python client to the braincube web services"
authors = ["Braincube <io@braincube.com>"]
license = "MIT"
packages = [
	{ include = "braincube_connector" },
]
classifiers = [
		"Programming Language :: Python :: 3.8",
		"Programming Language :: Python :: 3.7",
		"Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent"
]
keywords = ["bc_connector", "API", "braincube"]
readme = "README.md"
homepage = "https://braincube-io.github.io/python-connector/"
repository = "https://github.com/braincube-io/python-connector"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.23.0"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
responses = "~0.10.16"
coverage = "^7.3.2"
black = "^23.9.1"
wemake-python-styleguide = "^0.18.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pre-commit = "^3.4.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-material = "^9.4.5"
anybadge = "^1.14.0"
jupyter = "^1.0.0"
notebook = "^7.0.4"
mkdocs-jupyter = "^0.24.5"
pytest-watch = "^4.2.0"
types-requests = "^2.31.0.8"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests_integration",
]

[tool.coverage.report]
exclude_lines = [
	      'pragma: no cover',
	      'if TYPE_CHECKING:'
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
